# Vulkan

./: .clangd  .gitignore  Analiz.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Eğitim.md  Kullanıcı_kitabı.md  LICENSE  README.md  run_vkt.bat  vcpkg.json
.claude/: settings.local.json
.github/: copilot-instructions.md
resources/: vkt.rc
shaders/: basic.vert  clash_detection.comp  composite.frag  fullscreen.vert  gbuffer.frag  gbuffer.vert  ssao.frag  ssao_blur.frag
src/: main.cpp
src/cad/: Arc.cpp  Circle.cpp  DWGReader.cpp  DWGWriter.cpp  DXFReader.cpp  DXFWriter.cpp  Dimension.cpp  Ellipse.cpp  Entity.cpp  FixtureSymbolLibrary.cpp  Hatch.cpp  Layer.cpp  LayerManager.cpp  Leader.cpp  Line.cpp  Polyline.cpp  SelectionManager.cpp  SnapManager.cpp  Space.cpp  SpaceManager.cpp  Spline.cpp  Text.cpp  Viewport.cpp
src/core/: Application.cpp  Document.cpp  DocxWriter.cpp  FloorManager.cpp  IfcExporter.cpp  Persistence.cpp  ProjectManager.cpp  Window.cpp
src/geom/: BRep.cpp
src/mep/: ChartGenerator.cpp  ClashDetection.cpp  Database.cpp  HydraulicSolver.cpp  NetworkGraph.cpp  RiserDiagram.cpp  ScheduleGenerator.cpp  SpecGenerator.cpp  XLSXWriter.cpp
src/renderer/: Gizmo.cpp  VulkanRenderer.cpp  VulkanWindow.cpp
src/ui/: CommandBar.cpp  DXFImportDialog.cpp  DevreSecenekleriDialog.cpp  FixturePropertiesPanel.cpp  FloorAlignmentDialog.cpp  MainWindow.cpp  MainWindow_Analysis.cpp  MainWindow_CADEdit.cpp  MainWindow_Layer.cpp  MimariBelirleDialog.cpp  NewProjectDialog.cpp  PBRMaterialEditor.cpp  PreflightCheckDialog.cpp  PrintLayout.cpp  PrintLayoutDialog.cpp  STFixturePanel.cpp  SnapOverlay.cpp  SpacePanel.cpp  SymbolPalettePanel.cpp  UI.cpp
templates/: 3_katli_konut.vkt  index.json  ofis_kati.vkt  otel_odasi.vkt
tests/: CMakeLists.txt  test_cad.cpp  test_dwg_colors.cpp  test_dxf_import.cpp  test_dxf_roundtrip.cpp  test_export.cpp  test_geometry.cpp  test_hydraulic.cpp  test_network.cpp  test_persistence.cpp  test_riser.cpp
vkt/cad/: Arc.hpp  Block.hpp  Circle.hpp  DWGReader.hpp  DWGWriter.hpp  DXFReader.hpp  DXFWriter.hpp  Dimension.hpp  Ellipse.hpp  Entity.hpp  EntityGrid.hpp  FixtureSymbolLibrary.hpp  Hatch.hpp  Layer.hpp  LayerManager.hpp  Leader.hpp  Line.hpp  Polyline.hpp  SelectionManager.hpp  SnapManager.hpp  Space.hpp  SpaceManager.hpp  Spline.hpp  Text.hpp  Viewport.hpp
vkt/core/: Application.hpp  Command.hpp  Commands.hpp  Document.hpp  DocxWriter.hpp  FloorManager.hpp  IfcExporter.hpp  Persistence.hpp  ProjectManager.hpp  Version.hpp.in  Window.hpp
vkt/geom/: BRep.hpp  Math.hpp  Quaternion.hpp
vkt/mep/: ChartGenerator.hpp  ClashDetection.hpp  Database.hpp  HydraulicSolver.hpp  MaterialProperties.hpp  NetworkGraph.hpp  RiserDiagram.hpp  ScheduleGenerator.hpp  SpecGenerator.hpp  XLSXWriter.hpp
vkt/render/: Gizmo.hpp  VulkanRenderer.hpp  VulkanWindow.hpp
vkt/ui/: CommandBar.hpp  DXFImportDialog.hpp  DevreSecenekleriDialog.hpp  FixturePropertiesPanel.hpp  FloorAlignmentDialog.hpp  MainWindow.hpp  MimariBelirleDialog.hpp  NewProjectDialog.hpp  PBRMaterialEditor.hpp  PreflightCheckDialog.hpp  PrintLayout.hpp  PrintLayoutDialog.hpp  STFixturePanel.hpp  SnapOverlay.hpp  SpacePanel.hpp  SymbolPalettePanel.hpp  UI.hpp
